test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_array_indexing_2d.draco
proc main() void : a := a[1,2]; corp;

