test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_dim_expr_non_array_name.draco
proc main() void : a := dim(a[1], 1); corp;

